test/sema/typeck/lambda/variadic-wrong-later-argument.dora
fn f(sum: (Int32...): Int32): Int32 {
    sum(1i32, 2i32, false)
}
